[fix] Fixed centering of dashboard pie charts and login on small screens #275
Fixes #275

--- a/openwisp_utils/admin_theme/static/admin/css/openwisp.css
+++ b/openwisp_utils/admin_theme/static/admin/css/openwisp.css
@@ -1646,3 +1646,11 @@ body::-webkit-scrollbar {
   mask-image: url(../../ui/openwisp/images/node.svg);
   -webkit-mask-image: url(../../ui/openwisp/images/node.svg);
 }
+
+/* LOGIN SCREEN */
+@media only screen and (max-width: 576px) {
+ 
+  .login #container  {
+    width: auto !important;
+  }
+}
