--- a/openwisp_utils/admin_theme/static/admin/css/ow-dashboard.css
+++ b/openwisp_utils/admin_theme/static/admin/css/ow-dashboard.css
@@ -33,3 +33,12 @@
     margin-left: 0;
   }
 }
+
+@media only screen and (max-width: 576px) {
+ 
+  #plot-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+}
